Changed get(0) by getFirst()